* object.c (rb_inspect): raises Encoding::CompatibilityError if the   result is incompatible with the default external encoding.   [ruby-core:41931] [Bug #5848]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34218 b2dd03c8-39d4-4d8f-98ff-823fe69b080e