test/ruby/test_m17n.rb
@@ -256,6 +256,21 @@ class TestM17N < Test::Unit::TestCase
     end
   end
 
+  def test_object_utf16_32_inspect
+    orig_int = Encoding.default_internal
+    orig_ext = Encoding.default_external
+    Encoding.default_internal = nil
+    Encoding.default_external = Encoding::UTF_8
+    o = Object.new
+    [Encoding::UTF_16BE, Encoding::UTF_16LE, Encoding::UTF_32BE, Encoding::UTF_32LE].each do |e|
+      o.instance_eval "def inspect;'abc'.encode('#{e}');end"
+      assert_raise(Encoding::CompatibilityError) { [o].inspect }
+    end
+  ensure
+    Encoding.default_internal = orig_int
+    Encoding.default_external = orig_ext
+  end
+
   def test_str_dump
     [
       e("\xfe"),
